--- a/css/index.css
+++ b/css/index.css
@@ -31,7 +31,7 @@ body {
 
 /* 左侧布局 */
 .left-view {
-    max-height: 450px;
+    max-height: 500px;
     min-width: 300px;
     background-color: white;
     margin-right: 20px;
@@ -40,25 +40,32 @@ body {
 
 /* 头像 */
 .avatar-view {
-    margin: 20px;
+    margin-top: 40px;
     display: flex;
     justify-content: center;
     /* align-content: center; */
 }
 
+.avatar-background {
+    background-image: linear-gradient( rgb(247,150,70), rgb(255, 255, 255), rgb(85,142,213));
+    background-clip: border;
+    width: 115px;
+    height: 115px;
+    border-radius: 50%;
+    transform: rotate(45deg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
 .avatar {
-    background-image: url("../assect/avatar.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size:cover;
-    /* margin-left: auto; */
-    /* margin-right: 20px; */
-    /* position: relative; */
+    position: absolute;
     width: 100px;
     height: 100px;
-    border: solid 5px #fff;
-    top: 50px;
     z-index: 10;
+    border-radius: 50%;
+    transform: rotate(-45deg);
 }
 
 /* 标题名称 */
@@ -145,7 +152,7 @@ body {
 .content-view {
     position: relative;
     min-width: 800px;
-    min-height: 200px;
+    min-height: 100px;
 }
 
 .graphical-90 {
@@ -161,6 +168,25 @@ body {
     padding: 10px;
     line-height: 25px;
     font-size: 15px;
+    max-width: 90%;
+}
+
+/* ... */
+table {
+    width: 710px;
+}
+
+tr:first-child {
+    background-color: aliceblue;
+}
+
+tr td {
+    padding-left: 10px;
+    min-width: 75px;
+}
+
+tr:not(:nth-child(1)) {
+    background-color: antiquewhite;
 }
 
 
