--- a/css/left-view.css
+++ b/css/left-view.css
@@ -1,8 +1,8 @@
 
 /* 左侧布局 */
 .left-view {
-    max-height: 500px;
-    min-width: 300px;
+    height: 500px;
+    width: 300px;
     /* background-color: white;
     margin-right: 20px;
     border-radius: 5px; */
@@ -11,15 +11,15 @@
 }
 
 .empty-left-view {
-    max-height: 550px;
-    min-width: 300px;
-    margin-right: 20px;
+    height: 550px;
+    width: 300px;
+    margin-right: 15px;
 }
 
 .left-view-fixed {
     position: fixed;
-    max-height: 550px;
-    min-width: 300px;
+    height: 550px;
+    width: 300px;
     border-radius: 5px;
     /* transition: .6s; */
 }
@@ -250,4 +250,16 @@ transform:rotate(旋转角度)
 
 .widget_switch_checkbox:checked~.widget_switch_label {
     background: rgb(247,150,70);
+}
+
+.button-view {
+    padding-left: 20px;
+    display: flex;
+}
+
+.button-view-title {
+    line-height: 33px; 
+    margin-right: 10px; 
+    color: #909399; 
+    font-size: 14px;
 }
