--- a/css/left-view.css
+++ b/css/left-view.css
@@ -1,15 +1,5 @@
 
 /* 左侧布局 */
-.left-view {
-    height: 500px;
-    width: 300px;
-    /* background-color: white;
-    margin-right: 20px;
-    border-radius: 5px; */
-    /* transition: .6s; */
-    /* box-shadow: 0 2px 12px 0 rgba(0, 0, 0, .1); */
-}
-
 .empty-left-view {
     height: 550px;
     width: 300px;
@@ -43,7 +33,6 @@
 
 .avatar-background {
     background-image: linear-gradient( rgb(247,150,70), rgb(255, 255, 255), rgb(85,142,213));
-    background-clip: border;
     width: 115px;
     height: 115px;
     border-radius: 50%;
@@ -181,6 +170,7 @@ transform:rotate(旋转角度)
 .order-info-column {
     display: flex;
     line-height: 28px;
+    font-size: 16px;
 }
 
 .order-info-column a {
