--- a/css/right-view.css
+++ b/css/right-view.css
@@ -43,12 +43,13 @@
     line-height: 25px;
     font-size: 15px;
     max-width: 90%;
+    margin-top: 5px;
 }
 
 /* ... */
 table {
     /* width: 700px; */
-    margin-top: 10px;
+    /*margin-top: 10px;*/
 }
 
 tr:first-child {
@@ -60,8 +61,11 @@ tr td {
     min-width: 75px;
 }
 
+tr td a {
+    color: black;
+}
+
 tr:not(:nth-child(1)) {
     /* background-color: antiquewhite; */
 }
-
 
