--- a/css/right-view.css
+++ b/css/right-view.css
@@ -5,8 +5,8 @@
     padding-top: 20px;
     padding-bottom: 20px;
     position: relative;
-    width: 50%;
-    min-width: 800px;
+    width: 45%;
+    min-width: 720px;
     background-color: white;
     border-radius: 5px;
     box-shadow: 0 2px 12px 0 rgba(0, 0, 0, .1);
@@ -18,15 +18,15 @@
     width: 2px;
     height: calc(100% - 40px);
     background-color: rgb(85,142,213);
-    left: 50px;
+    left: 45px;
     top: 20px;
 }
 
 /* 正文 */
 .content-view {
     position: relative;
-    min-width: 800px;
-    min-height: 100px;
+    min-width: 720px;
+    min-height: 90px;
 }
 
 .graphical-90 {
@@ -41,7 +41,7 @@
     top: 50px;
     padding: 10px;
     line-height: 25px;
-    font-size: 15px;
+    font-size: 14px;
     max-width: 90%;
     margin-top: 5px;
 }
@@ -57,8 +57,8 @@ tr:first-child {
 }
 
 tr td {
-    padding-left: 10px;
-    min-width: 75px;
+    /*padding-left: 10px;*/
+    min-width: 70px;
 }
 
 tr td a {
